Overflow-x on body fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  overflow-x: hidden;
+  position: relative;
 }
 main {
   flex: 1; /* Or flex-grow: 1;*/
